openshift/routes/ingress-tls-tea.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: venafi-tpp-demo1-ingress-tea
  namespace: tea
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - tea.oc.venafi-tpp.riaz-mohamed-gcp.jetstacker.net
    secretName: tea-oc-venafi-tpp.riaz-mohamed-gcp.jetstacker.net
  rules:
  - host: tea.oc.venafi-tpp.riaz-mohamed-gcp.jetstacker.net
    http:
      paths:
      - path: /tea
        pathType: Prefix
        backend:
          service:
            name: tea-svc
            port: 
              number: 80
